--- a/app/globals.css
+++ b/app/globals.css
@@ -1,12 +1,18 @@
 * {
   box-sizing: border-box;
-  color: white;
   padding: 0;
   margin: 0;
 }
 
 html,
 body {
+  color: white;
   max-width: 100vw;
-  overflow-x: hidden;
+  scrollbar-width: none;
+}
+
+@media (prefers-color-scheme: dark) {
+  html {
+    background-color: black;
+  }
 }
