--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,44 +1,70 @@
 .main {
+  display: grid;
+  gap: 0.5rem;
+  grid-template-columns: repeat(6, minmax(0, 1fr));
+  grid-auto-rows: calc((100dvh - 3.5rem) / 6);
+  padding: 0.5rem;
+}
+
+.section {
+  border-radius: 0.25rem;
+  position: relative;
+}
+
+.section:nth-of-type(1) {
+  grid-column: 1 / -1;
+  grid-row: span 6;
+}
+
+.info {
   align-items: center;
   display: flex;
   flex-direction: column;
   gap: calc(4vmin + 1rem);
+  height: 100%;
   justify-content: center;
-  min-height: 100svh;
-  padding: 6vmin;
+  max-height: calc(100dvh - 1rem);
+  position: relative;
   text-align: center;
+  width: 100%;
+  z-index: 1;
 }
 
-.main h1 {
+.info h1 {
   font-family: var(--font-yellowtail);
   font-size: calc(8vmin + 1rem);
   line-height: 1;
-  mix-blend-mode: overlay;
 }
 
-.main p {
+.section:first-of-type .info p {
   font-family: var(--font-inter);
   font-size: calc(1vmin + 0.8rem);
   line-height: 1.5;
-  mix-blend-mode: overlay;
 }
 
-.main ul {
+.info ul {
   display: flex;
   gap: calc(3vmin + 1rem);
-  mix-blend-mode: overlay;
 }
 
-.main a {
+.info a {
+  color: white;
   display: flex;
   outline-color: white;
   outline-offset: 4px;
 }
 
+.info code {
+  font-size: 1rem;
+  word-wrap: break-word;
+}
+
 .gradielicious {
-  position: fixed;
+  border-radius: 0.25rem;
+  height: 100%;
+  overflow: hidden;
   inset: 0;
-  z-index: -1;
+  width: 100%;
 }
 
 .linkCircle {
@@ -47,4 +73,72 @@
 
 .linkNpm {
   border-radius: 0.125rem;
+}
+
+.package {
+  position: relative;
+}
+
+@media (orientation: portrait) {
+  .section:nth-of-type(2) {
+    grid-column: 1 / -1;
+    grid-row: span 3;
+  }
+
+  .section:nth-of-type(3) {
+    grid-column: 1 / -1;
+    grid-row: span 3;
+  }
+
+  .section:nth-of-type(4),
+  .section:nth-of-type(5),
+  .section:nth-of-type(6),
+  .section:nth-of-type(7),
+  .section:nth-of-type(8),
+  .section:nth-of-type(9) {
+    grid-column: 1 / -1;
+    grid-row: span 2;
+  }
+
+  .section:nth-of-type(10) {
+    grid-column: 1 / -1;
+    grid-row: span 24;
+  }
+
+  .section:nth-of-type(11) {
+    grid-column: 1 / -1;
+    grid-row: span 6;
+  }
+}
+
+@media (orientation: landscape) {
+  .section:nth-of-type(2) {
+    grid-column: 1 / span 3;
+    grid-row: span 6;
+  }
+
+  .section:nth-of-type(3) {
+    grid-column: 4 / -1;
+    grid-row: span 6;
+  }
+
+  .section:nth-of-type(4),
+  .section:nth-of-type(5),
+  .section:nth-of-type(6),
+  .section:nth-of-type(7),
+  .section:nth-of-type(8),
+  .section:nth-of-type(9) {
+    grid-column: span 2;
+    grid-row: span 3;
+  }
+
+  .section:nth-of-type(10) {
+    grid-column: 1 / -1;
+    grid-row: span 24;
+  }
+
+  .section:nth-of-type(11) {
+    grid-column: 1 / -1;
+    grid-row: span 6;
+  }
 }
